<resources>
    <string name="locale">en</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="find_hint">Find …</string>
    <string name="help">Help</string>
    <string name="not_supported">Not supported</string>
    <string name="stations_icon_label">Öffi Stations</string>
    <string name="favorite_stations_icon_label">Öffi Favorites</string>
    <string name="directions_icon_label">Öffi Directions</string>
    <string name="plans_icon_label">Öffi Plans</string>
    <string name="operations_icon_label">Öffi Operations</string>
    <string name="disclaimer_network_and_responsibility">data provided by %s\nerrors and omissions excepted</string>
    <string name="disclaimer_network">data provided by\n%s</string>
    <string name="disclaimer_responsibility">errors and omissions excepted</string>
    <string name="disclaimer_responsibility_2line">errors and omis-\nsions excepted</string>
    <string name="navigation_drawer_message">I\'m developing Öffi with love in my spare time. It\'s free to use and there are no ads. If you would like show your support, can you rate the app 5 stars and recommend it to your friends?</string>
    <string name="action_bar_navigator_description">Navigator</string>
    <string name="action_bar_back_description">Back</string>
    <string name="action_bar_progress_description">Refresh</string>
    <string name="action_bar_overflow_description">More</string>
    <string name="stations_activity_title">Nearby …</string>
    <string name="station_details_activity_title">Station Departures</string>
    <string name="station_details_activity_departures_short_title">Departures</string>
    <string name="station_details_activity_arrivals_short_title">Arrivals</string>
    <string name="directions_activity_title">Directions</string>
    <string name="operations_activity_title">Operations</string>
    <string name="trip_details_title">Connection Details</string>
    <string name="journey_details_title">Line Details</string>
    <string name="operation_details_title">Operation Details</string>
    <string name="navigation_title">Navigation</string>
    <string name="operation_navigation_title">Operation Guide</string>
    <string name="plans_activity_title">Network Plans</string>
    <string name="network_picker_activity_title">Pick Transportation Network</string>
    <string name="assistant_label_title">Öffi Assistant</string>
    <string name="global_options_operations_comment">Drivers\' operations planning</string>
    <string name="global_options_stations_comment">Departure times and delays</string>
    <string name="global_options_directions_comment">From door to door</string>
    <string name="global_options_plans_comment">For a rough overview</string>
    <string name="global_options_show_log_title">Show log</string>
    <string name="global_options_terminate_title">Terminate</string>
    <string name="global_options_report_bug_title">Report bug</string>
    <string name="global_options_preferences_title">Settings</string>
    <string name="global_options_extras_title">Extras</string>
    <string name="global_options_clear_navigation_title">Clear all navigations</string>
    <string name="global_options_about_title">About %1$s</string>
    <string name="global_options_gift_url">https://oeffi.schildbach.de/gift.html</string>
    <string name="global_options_share_app_title">Share %1$s</string>
    <string name="global_options_share_app_text">This is the link to download and install the %1$s app.\n\n%2$s</string>
    <string name="global_preferences_title">Common</string>
    <string name="global_preferences_show_hints_title">Show hints</string>
    <string name="global_preferences_show_hints_summary">Show useful hints now and then.</string>
    <string name="global_preferences_check_for_updates_title">Check for updates</string>
    <string name="global_preferences_check_for_updates_summary">Check if updates are available, when starting the app.</string>
    <string name="global_preferences_location_settings_title">Location settings</string>
    <string name="global_preferences_location_settings_summary">Enable location providers, e.g. GPS.</string>
    <string name="global_preferences_battery_optimizations_title">Battery optimizations</string>
    <string name="global_preferences_battery_optimizations_summary">If the app-widget cannot fetch departure times while your device is in standby, you should disable battery optimizations for Öffi.</string>
    <string name="network_preferences_title">Data Provider</string>
    <string name="network_preferences_provider_title">Transport network</string>
    <string name="network_preferences_provider_summary">Select region and source of data to be used.\n[%s]</string>
    <string name="network_preferences_credentials_title">Credentials</string>
    <string name="network_preferences_credentials_summary">Provide credentials if required by the provider, e.g. an API token</string>
    <string name="network_preferences_credentials_edit_title">Enter Credentials …</string>
    <string name="network_preferences_credentials_edit_hint">… for %1$s</string>
    <string name="network_preferences_credentials_not_working_title">Test failed</string>
    <string name="network_preferences_credentials_not_working_message">The network refused access using these credentials!</string>
    <string name="network_preferences_credentials_help_url" translatable="false">https://github.com/santawho/oeffi-ng/wiki/Credentials</string>
    <string name="shortcuts_preferences_title">Homescreen Shortcuts</string>
    <string name="shortcuts_preferences_summary">Create shortcuts on homescreen</string>
    <string name="assistant_title">Öffi as assistant app</string>
    <string name="assistant_enabled_title">Make Öffi an assistant app</string>
    <string name="assistant_choose_title">Set Öffi in system …</string>
    <string name="assistant_choose_assistant_title">… as default assistant app</string>
    <string name="assistant_choose_voice_title">… as default voice assistant app</string>
    <string name="assistant_button_title">On <b>device button</b> action …</string>
    <string name="assistant_headset_title">On <b>headset</b> action …</string>
    <string name="assistant_action_nearby_stations_enabled_title">… start \"nearby stations\"</string>
    <string name="assistant_action_nearby_stations_enabled_summary">
        When the previous click started a navigation action, then this is done on the second click within 5 seconds
    </string>
    <string name="assistant_action_navigation_instruction_enabled_title">… speak navigation instruction</string>
    <string name="assistant_action_navigation_screen_enabled_title">… show navigation information</string>
    <string name="assistant_action_fallback_app_title">… open another assistant</string>
    <string name="assistant_action_fallback_app_summary">Choose another assistant app as fallback.  [%s]</string>
    <string name="assistant_choose_fallback_app_title">Choose another assistant app as fallback.</string>
    <string name="assistant_choose_fallback_app_none">(none)</string>
    <string name="about_title">About %1$s</string>
    <string name="about_version_title">Version</string>
    <string name="about_original_version_title">Original app version</string>
    <string name="about_copyright_title">Copyright</string>
    <string name="about_copyright_summary">© 2010–2026, the Öffi developers</string>
    <string name="about_license_title">License</string>
    <string name="about_data_provider_title">Data Supplier</string>
    <string name="about_data_provider_summary_pattern1">Data is supplied by %1$s</string>
    <string name="about_data_provider_summary_pattern2">\nand %1$s</string>
    <string name="about_privacy_policy_title">Privacy Policy</string>
    <string name="about_source_title">Source code</string>
    <string name="about_forum_title">Forum / Discussions</string>
    <string name="about_changelog_title">View Changelog</string>
    <string name="about_changelog_summary">https://oeffi.schildbach.de/changelog.html</string>
    <string name="about_faq_title">FAQ</string>
    <string name="about_update_and_share_title">Update and Share</string>
    <string name="about_check_update_title">Check for Updates</string>
    <string name="extras_title">Special Functions</string>
    <string name="station_context_details_title">Show All Departures</string>
    <string name="station_context_nearby_departures_title">Show Nearby Departures</string>
    <string name="stations_favorite_stations_title">Favorite Stations</string>
    <string name="directions_option_bike">bicycle carriage</string>
    <string name="directions_option_direct">direct connections</string>
    <string name="directions_location_selector_context_pin_title">Set pinned</string>
    <string name="directions_location_selector_context_unpin_title">Remove pinning</string>
    <string name="directions_location_selector_context_set_from_title">Use as origin</string>
    <string name="directions_location_selector_context_set_to_title">Use as destination</string>
    <string name="directions_location_selector_context_set_via_title">Use as via</string>
    <string name="directions_location_selector_context_delete_title">Delete</string>
    <string name="directions_trip_details_action_calendar_title">Add to calendar</string>
    <string name="directions_trip_details_action_share_short_title">Share short message…</string>
    <string name="directions_trip_details_action_share_long_title">Share detailed message…</string>
    <string name="directions_trip_details_action_share_link_title">Share with link…</string>
    <string name="directions_trip_details_action_open_share_link_title">Open in provider app (via sharing)</string>
    <string name="directions_trip_details_action_open_direct_link_title">Open in provider app (direct link)</string>
    <string name="directions_trip_details_action_open_external_kml_maps_app_title">Show KML in external maps app</string>
    <string name="directions_trip_details_action_open_external_gpx_maps_app_title">Show GPX in external maps app</string>
    <string name="create_launcher_shortcut_dialog_name_hint">Shortcut Name, e.g. \'Work\'</string>
    <string name="create_launcher_shortcut_dialog_connection_label">shortcut for connection to location</string>
    <string name="create_launcher_shortcut_dialog_departures_label">shortcut for departure board</string>
    <string name="directions_preferences_title">Directions</string>
    <string name="directions_preferences_optimize_trip_title">Optimize</string>
    <string name="directions_preferences_optimize_trip_summary">What\'s most important to you?  [%s]</string>
    <string name="directions_preferences_walk_speed_title">Walk speed</string>
    <string name="directions_preferences_walk_speed_summary">How fast can you walk?  [%s]</string>
    <string name="directions_preferences_walk_distance_title">Maximum walk distance</string>
    <string name="directions_preferences_walk_distance_summary">How far can you walk?  [%sm]</string>
    <string name="directions_preferences_min_transfer_time_title">Minimum transfer time</string>
    <string name="directions_preferences_min_transfer_time_summary">How long do you need for a transfer?  [%s]</string>
    <string name="directions_preferences_accessibility_title">Accessibility</string>
    <string name="directions_preferences_accessibility_summary">How accessible do you need the route to be?  [%s]</string>
    <string name="product_i">Highspeed</string>
    <string name="product_r">Regional</string>
    <string name="product_s">Suburban</string>
    <string name="product_u">Metro</string>
    <string name="product_t">Tram</string>
    <string name="product_b">Bus</string>
    <string name="product_p">On-Demand</string>
    <string name="product_f">Ferry</string>
    <string name="product_c">Cablecar</string>
</resources>