<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/shortcuts_preferences_title" >

    <Preference
        android:key="shortcuts_operations"
        android:title="@string/operations_activity_title" />
    <Preference
        android:key="shortcuts_directions"
        android:title="@string/directions_activity_title" />
    <Preference
        android:key="shortcuts_stations"
        android:title="@string/stations_activity_title" />
    <Preference
        android:key="shortcuts_favorites"
        android:title="@string/stations_favorite_stations_title" />
    <Preference
        android:key="shortcuts_plans"
        android:title="@string/plans_activity_title" />
    <PreferenceScreen
        android:fragment="de.schildbach.oeffi.preference.AssistantFragment"
        android:title="@string/assistant_title" />

</PreferenceScreen>
