<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:summary="@string/directions_preferences_summary" />

    <ListPreference
        android:entries="@array/directions_optimize_trip"
        android:entryValues="@array/directions_optimize_trip_values"
        android:key="optimize_trip"
        android:summary="@string/directions_preferences_optimize_trip_summary"
        android:title="@string/directions_preferences_optimize_trip_title" />
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/directions_min_transfer_time"
        android:entryValues="@array/directions_min_transfer_time_values"
        android:key="min_transfer_time"
        android:summary="@string/directions_preferences_min_transfer_time_summary"
        android:title="@string/directions_preferences_min_transfer_time_title" />
    <ListPreference
        android:defaultValue="NORMAL"
        android:entries="@array/directions_walk_speed"
        android:entryValues="@array/directions_walk_speed_values"
        android:key="walk_speed"
        android:summary="@string/directions_preferences_walk_speed_summary"
        android:title="@string/directions_preferences_walk_speed_title" />
    <EditTextPreference
        android:inputType="number"
        android:defaultValue="2000"
        android:key="walk_distance"
        android:summary="@string/directions_preferences_walk_distance_summary"
        android:title="@string/directions_preferences_walk_distance_title" />
    <ListPreference
        android:defaultValue="NEUTRAL"
        android:entries="@array/directions_accessibility"
        android:entryValues="@array/directions_accessibility_values"
        android:key="accessibility"
        android:summary="@string/directions_preferences_accessibility_summary"
        android:title="@string/directions_preferences_accessibility_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="bicycle_travel"
        android:summary="@string/directions_preferences_bicycle_carriage_summary"
        android:title="@string/directions_preferences_bicycle_carriage_title"
        />

</PreferenceScreen>
