<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/directions_trip_details_action_add_to_calendar"
        android:title="@string/directions_trip_details_action_calendar_title"
        android:icon="@drawable/ic_today_white_24dp"
        android:iconTint="@color/fg_significant"
        android:visible="false" />
    <item
        android:id="@+id/directions_trip_details_action_share_short"
        android:title="@string/directions_trip_details_action_share_short_title"
        android:icon="@drawable/ic_share_white_24dp"
        android:iconTint="@color/fg_significant" />
    <item
        android:id="@+id/directions_trip_details_action_share_long"
        android:title="@string/directions_trip_details_action_share_long_title"
        android:icon="@drawable/ic_share_white_24dp"
        android:iconTint="@color/fg_significant" />
    <item
        android:id="@+id/directions_trip_details_action_share_link"
        android:title="@string/directions_trip_details_action_share_link_title"
        android:icon="@drawable/ic_share_white_24dp"
        android:iconTint="@color/fg_significant" />
    <item
        android:id="@+id/directions_trip_details_action_open_direct_link"
        android:title="@string/directions_trip_details_action_open_direct_link_title"
        android:icon="@drawable/ic_open_ext_black_24dp"
        android:iconTint="@color/fg_significant" />
    <item
        android:id="@+id/directions_trip_details_action_open_share_link"
        android:title="@string/directions_trip_details_action_open_share_link_title"
        android:icon="@drawable/ic_open_ext_black_24dp"
        android:iconTint="@color/fg_significant" />
    <item
        android:visible="false"
        android:id="@+id/directions_trip_details_action_open_external_kml_maps_app"
        android:title="@string/directions_trip_details_action_open_external_kml_maps_app_title"
        android:icon="@drawable/ic_map_white_24dp"
        android:iconTint="@color/fg_significant" />
    <item
        android:visible="false"
        android:id="@+id/directions_trip_details_action_open_external_gpx_maps_app"
        android:title="@string/directions_trip_details_action_open_external_gpx_maps_app_title"
        android:icon="@drawable/ic_map_white_24dp"
        android:iconTint="@color/fg_significant" />

</menu>
